# dex-mono

./: .gitmodules  README.md
rust_ws/: Cargo.toml  justfile
rust_ws/crates/airdrop/: Cargo.toml  tree.json
rust_ws/crates/airdrop/src/: lib.rs
rust_ws/crates/data_init/: Cargo.toml  README.md
rust_ws/crates/data_init/src/: lib.rs
rust_ws/crates/dex-client/: Cargo.toml  README
rust_ws/crates/dex-client/src/: lib.rs
rust_ws/crates/dex-client/src/dex_client/: client.rs
rust_ws/crates/dex-client/src/dex_utils/: config.rs  math.rs  misc.rs  mod.rs  signer.rs  tx.rs  types.rs
rust_ws/crates/dex-client/src/dex_utils/bindings/: i_clearinghouse.rs  i_endpoint.rs  i_offchain_orderbook.rs  i_spot_engine.rs  mod.rs
rust_ws/crates/dex-client/src/dex_utils/contracts/: clearinghouse.rs  constants.rs  endpoint.rs  mod.rs  offchain_orderbook.rs  spot_engine.rs  utils.rs
rust_ws/crates/dex-client/src/utils/: mod.rs
rust_ws/crates/exchange/: Cargo.toml  README  pubsub.capnp  pubsub2.capnp
rust_ws/crates/exchange/src/: constants.rs  lib.rs
rust_ws/crates/exchange/src/exchange_client/: main.rs
rust_ws/crates/exchange/src/exchange_service/: build.rs  main.rs
rust_ws/crates/exchange/src/exchange_service/backend/: mod.rs
rust_ws/crates/exchange/src/exchange_service/lib/: env.rs
rust_ws/crates/exchange/src/orderbook/: mod.rs  order.rs  order_command.rs  order_list.rs  orderbook.rs
rust_ws/crates/exchange/src/subaccount/: subaccount.rs
rust_ws/crates/exchange/src/tests/it/: sanity_test.rs
rust_ws/crates/indexer-service/: Cargo.toml  README.md  justfile
rust_ws/crates/indexer-service/src/: lib.rs  utils.rs
rust_ws/crates/indexer-service/src/account/: mod.rs
rust_ws/crates/oracle/: Cargo.toml
rust_ws/crates/oracle/src/: client.rs  constants.rs  indexer.rs  lib.rs
rust_ws/crates/shared/: Cargo.toml  justfile
rust_ws/crates/shared/src/: lib.rs
rust_ws/crates/shared/src/db/clickhouse/: mod.rs
rust_ws/crates/shared/src/db/redis/: mod.rs
rust_ws/crates/web-app/: .gitignore  Cargo.toml  README.md  justfile  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tailwind.login.config.js
rust_ws/crates/web-app/e2etests/: screenshots.spec.ts
rust_ws/crates/web-app/e2etests/dashboard/: page.spec.ts
rust_ws/crates/web-app/e2etests/dashboard/editor/: page.spec.ts
rust_ws/crates/web-app/e2etests/dashboard/strategy/: page.spec.ts
rust_ws/crates/web-app/e2etests/helpers/: index.ts
rust_ws/crates/web-app/e2etests/login/: page.spec.ts
rust_ws/crates/web-app/e2etests/signup/: page.spec.ts
rust_ws/crates/web-app/e2etests/smoke/: index.spec.ts
rust_ws/crates/web-app/prototypes/: README.md
rust_ws/crates/web-app/prototypes/explorer/: index.html
rust_ws/crates/web-app/prototypes/markets/: index.html
rust_ws/crates/web-app/prototypes/trade/: index.html
rust_ws/crates/web-app/public/mirrors/: inter.css
rust_ws/crates/web-app/public/styles/: fonts.css  uplot.css
rust_ws/crates/web-app/public/styles/login/: style.css
rust_ws/crates/web-app/public/styles/markets/: style.css
rust_ws/crates/web-app/public/styles/social/: style.css
rust_ws/crates/web-app/public/styles/trade/: style.css
rust_ws/crates/web-app/scripts/: deploy.go  run
rust_ws/crates/web-app/src/: backend.rs  main.rs  routes.rs
rust_ws/crates/web-app/src/account/: mod.rs
rust_ws/crates/web-app/src/api/auth/: constants.rs  cookie.rs  extractor.rs  mod.rs  session_context.rs
rust_ws/crates/web-app/src/api/ws/: mod.rs  trade_page_turbo.rs  traders.rs
rust_ws/crates/web-app/src/app/: mod.rs
rust_ws/crates/web-app/src/app/components/: breadcrumb.rs  link.rs  meta.rs  mod.rs
rust_ws/crates/web-app/src/app/four0four/: mod.rs
rust_ws/crates/web-app/src/app/trade/: account_stats.rs  mod.rs  page.rs  page_turbo.rs  trade_stats.rs
rust_ws/crates/web-app/src/auth/: cookie.rs  evm_utils.rs  extractor.rs  mod.rs  session_context.rs
rust_ws/crates/web-app/src/errors/: mod.rs
rust_ws/crates/web-app/src/layout/: mod.rs
rust_ws/crates/web-app/src/lib/: api.rs  constants.rs  currency.rs  env.rs  log.rs  misc.rs  mod.rs  moment.rs  serde.rs  test_helper.rs  trade_symbol.rs  utils.rs
rust_ws/crates/web-app/src/models/account/: mod.rs
rust_ws/crates/web-app/src/pages/: mod.rs
rust_ws/crates/web-app/src/pages/components/: breadcrumb.rs  link.rs  meta.rs  mod.rs
rust_ws/crates/web-app/src/pages/four0four/: mod.rs
rust_ws/crates/web-app/src/pages/pulse/: mod.rs  page.rs
rust_ws/crates/web-app/src/pages/trade/: account_stats.rs  page.rs  page_turbo.rs  trade_stats.rs
rust_ws/crates/web-app/src/ws/: mod.rs  trade_page_turbo.rs  traders.rs
rust_ws/crates/web-app/styles/: ag_grid.css  global.css
rust_ws/crates/web-app/templates/: 404.stpl  layout.stpl  static_layout.stpl
rust_ws/crates/web-app/templates/components/: breadcrumb.stpl  clipboard.ts  footer.stpl  link.stpl  sidebar.stpl  sidebar.ts  status_badge.stpl
rust_ws/crates/web-app/templates/components/hotwired_turbo/: turbo_stream.stpl
rust_ws/crates/web-app/templates/components/kvtable/: header.stpl  index.stpl  kv.stpl
rust_ws/crates/web-app/templates/components/ui/: dialog.stpl  image.stpl  (+4 more)
rust_ws/crates/web-app/templates/dashboard/: page.stpl  page.ts  strategy_list.stpl  strategy_list_item.stpl
rust_ws/crates/web-app/templates/lib/: account.ts  auth_page.ts  htmx_turbostream.ts  http.ts  misc.ts  signal.ts
rust_ws/crates/web-app/templates/login/: page.stpl
rust_ws/crates/web-app/templates/portfolio/: page.stpl  page.ts  portfolio.stpl  portfolio_empty.stpl  portfolio_item.stpl
rust_ws/crates/web-app/templates/pulse/: page.stpl
rust_ws/crates/web-app/templates/signup/: already_signup_waiting.stpl  page.stpl
rust_ws/crates/web-app/templates/trade/: choose_market.stpl  head.stpl  market_list.stpl  page.stpl  page.stpl.copy  page.ts  top_account_stats.stpl  trade_stats.stpl
rust_ws/crates/web-app/test-js/: basic.test.ts
rust_ws/crates/ws-client/: Cargo.toml  LICENSE  README.md
rust_ws/crates/ws-client/examples/: client.rs
rust_ws/crates/ws-client/src/: lib.rs
(+85 files in other folders)
