[workspace]
members = [
  "crates/airdrop",
  "crates/data_init",
  "crates/dex-client",
  "crates/exchange",
  "crates/indexer-service",
  "crates/oracle",
  "crates/shared",
  "crates/web-app",
  "crates/ws-client",
]
resolver = "2"

[workspace.dependencies]
anyhow = "*"
dotenvy = "*"
ecow = { version = '*', features = ["serde"] }
env_logger = "0.11.1"
log = "0.4.20"
mimalloc = { version = '*' }
minitrace = "0.6"
thiserror = "*"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5.3"

time = { version = "0.3.22", features = ["parsing", "macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "*"
bincode = "1.3.3"

redis = { version = "0.24.0", features = ["tokio-native-tls-comp", "tokio-comp"] }
clickhouse = { version ="0.11.5", features = ["uuid", "tls", "time", "test-util"] }

alloy-primitives = "0.6.2"
ethers = { version = "2.0.11", features = ["abigen"]}
ethers-signers = "2.0.11"
ethers-contract = "2.0.11"
ethers-core = "2.0.11"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
lto = "fat" 