[package]
name = "airdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

anyhow = "*"
thiserror = "*"
dotenvy = "*"
tokio = { version = "1.35.1", features = ["full"] }

merkle-tree-rs = "0.1.0"
serde = "*"
serde_json = "*"
redis = { version = "0.24.0", features = ["tokio-native-tls-comp", "tokio-comp"] }
