[package]
name = "indexer_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "indexer_service"
path = "src/bin/main.rs"

[dependencies]
oracle = { path = "../oracle" }
shared = { path = "../shared" }

mimalloc = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
minitrace = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }