[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

anyhow = { workspace = true }
dotenvy = { workspace = true }
ecow = { workspace = true }
mimalloc = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

reqwest = { version = "0.11.23", features = ["json"] }
redis = { workspace = true }